# OpenCV-max-contour

./: CMakeLists.txt  main.cpp
